-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.1
-
e70e2f7d98 (qt/tqtc-qtdeclarative/5.15-opensource) e70e2f7d98 (qt/qtdeclarative/5.15) e70e2f7d98 (qt/tqtc-qtdeclarative/5.15)
Unfortunately, I have not been able to find a way to reproduce this and thus I cannot provide test application, yet anyway. Application where this stack trace was obtained uses ShaderEffects and some effects from QtGraphicalEffects.
Qt5Cored.dll!qt_message_fatal(QtMsgType __formal, const QMessageLogContext & context, const QString & message) Line 1641 C++ Qt5Cored.dll!QMessageLogger::fatal(const char * msg, ...) Line 790 C++ Qt5Cored.dll!qt_assert_x(const char * where, const char * what, const char * file, int line) Line 3007 C++ Qt5Quickd.dll!QVector<int>::at(int i) Line 419 C++ Qt5Quickd.dll!QQuickCustomMaterialShader::updateState(const QSGMaterialShader::RenderState & state, QSGMaterial * newEffect, QSGMaterial * oldEffect) Line 138 C++ Qt5Quickd.dll!QSGBatchRenderer::Renderer::renderMergedBatch(const QSGBatchRenderer::Batch * batch) Line 2263 C++ Qt5Quickd.dll!QSGBatchRenderer::Renderer::renderBatches() Line 2503 C++ Qt5Quickd.dll!QSGBatchRenderer::Renderer::render() Line 2699 C++ Qt5Quickd.dll!QSGRenderer::renderScene(const QSGBindable & bindable) Line 218 C++ Qt5Quickd.dll!QSGDefaultLayer::grab() Line 420 C++ Qt5Quickd.dll!QSGDefaultLayer::updateTexture() Line 170 C++ Qt5Quickd.dll!QQuickShaderEffectMaterial::updateTextures() Line 464 C++ Qt5Quickd.dll!QQuickShaderEffectNode::preprocess() Line 505 C++ Qt5Quickd.dll!QSGRenderer::preprocess() Line 279 C++ Qt5Quickd.dll!QSGRenderer::renderScene(const QSGBindable & bindable) Line 199 C++ Qt5Quickd.dll!QSGDefaultLayer::grab() Line 420 C++ Qt5Quickd.dll!QSGDefaultLayer::updateTexture() Line 170 C++ Qt5Quickd.dll!QQuickShaderEffectMaterial::updateTextures() Line 464 C++ Qt5Quickd.dll!QQuickShaderEffectNode::preprocess() Line 505 C++ Qt5Quickd.dll!QSGRenderer::preprocess() Line 279 C++ Qt5Quickd.dll!QSGRenderer::renderScene(const QSGBindable & bindable) Line 199 C++ Qt5Quickd.dll!QSGRenderer::renderScene(unsigned int fboId) Line 178 C++ Qt5Quickd.dll!QSGRenderContext::renderNextFrame(QSGRenderer * renderer, unsigned int fboId) Line 557 C++ Qt5Quickd.dll!QQuickWindowPrivate::renderSceneGraph(const QSize & size) Line 434 C++ Qt5Quickd.dll!QSGRenderThread::syncAndRender() Line 624 C++ Qt5Quickd.dll!QSGRenderThread::run() Line 707 C++ Qt5Cored.dll!QThreadPrivate::start(void * arg) Line 387 C++ [External Code]
For Gerrit Dashboard: QTBUG-55204 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
371300,3 | Reinitialize shader data structure when effect changes | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |