Reinitialize shader data structure when effect changes

Shaders might not all have the same number of uniforms and locations,
so reinitialize the array when the effect changes.

Change-Id: I16b4f6b865ebe7b74c2960a1e88b8f12b83ee2b3
Done-with: Matt Galloway
Fixes: QTBUG-55204
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>